// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Persistent versions of the notifications work 1`] = `
<div
  class="notification negative inline hidden"
  data-automation-class="generic-notification negative inline"
  style="margin-top: 0px;"
>
  <div
    class="icon"
  >
    <svg
      aria-hidden="true"
      aria-labelledby="80284680-3304-5869-9788-7428e6c6ee86"
      class="icon inheritSize"
      focusable="false"
      role="presentation"
    >
      <use
        xlink:href="#undefined"
      />
    </svg>
  </div>
  <div
    class="textContainer"
  >
    <h6
      class="title"
    >
      Error
    </h6>
    <p
      class="text"
    >
      Something has gone wrong
    </p>
  </div>
</div>
`;

exports[`The basic notification renders correctly 1`] = `
<div
  class="notification cautionary inline hidden"
  data-automation-class="generic-notification cautionary inline"
  style="margin-top: 0px;"
>
  <div
    class="icon"
  >
    <svg
      aria-hidden="true"
      aria-labelledby="80284680-3304-5869-9788-7428e6c6ee86"
      class="icon inheritSize"
      focusable="false"
      role="presentation"
    >
      <use
        xlink:href="#undefined"
      />
    </svg>
  </div>
  <div
    class="textContainer"
  >
    <h6
      class="title"
    >
      Warning
    </h6>
    <p
      class="text"
    >
      Something has gone wrong
    </p>
  </div>
  <button
    class="cancel"
    type="button"
  >
    <span
      class="cancelInner"
    >
      <svg
        aria-hidden="false"
        aria-labelledby="faffea72-0fc0-5bc3-8038-936bd9f22ca8"
        class="icon"
        focusable="false"
        role="img"
      >
        <title
          id="faffea72-0fc0-5bc3-8038-936bd9f22ca8"
        >
          close notification
        </title>
        <use
          xlink:href="#undefined"
        />
      </svg>
    </span>
  </button>
</div>
`;
